--- a/global.css
+++ b/global.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.pendulum-swing {
+    animation: swing 2000ms linear infinite;
+}
+
+@keyframes swing {
+    0% {
+        transform: translateX(-100px);
+    }
+
+    25% {
+        transform: translateX(100px);
+    }
+
+    50% {
+        transform: translateX(-100px);
+    }
+
+    75% {
+        transform: translateX(100px);
+    }
+
+    100% {
+        transform: translateX(-100px);
+    }
+}
