--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,10 @@
 ---
 import Metronome from "../components/Metronome";
+import "../../global.css";
 ---
+
+<head>
+    <link rel="stylesheet" href="../../global.css" />
+</head>
 
 <Metronome client:load />
