--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,8 @@
 ---
+import Layout from "../layouts/Layout.astro";
 import Metronome from "../components/Metronome";
-import "../../global.css";
 ---
 
-<head>
-    <link rel="stylesheet" href="../../global.css" />
-</head>
-
-<Metronome client:load />
+<Layout title="Meternome">
+    <Metronome client:load />
+</Layout>
