--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Metronome from "../components/Metronome";
+import Metronome from "./Metronome";
 ---
 
 <Layout title="Meternome">
     <Metronome client:load />
 </Layout>
+./Metronome
